--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,6 @@
 @import "nav.scss";
 @import "structure.scss";
 @import "about.scss";
+@import "books.scss";
+@import "cart.scss";
+@import "home.scss";
