--- a/scss/structure.scss
+++ b/scss/structure.scss
@@ -1,12 +1,16 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: borderbox;
+//     border: red solid 1px;
+
+// }
+
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
+
 h1,
 h2,
 h3,
@@ -14,5 +18,44 @@ h4,
 h5,
 h6,
 p {
-  margin-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+.xtraB {
+    margin-bottom: 85px;
+}
+
+.margin {
+    width: 85vw;
+    margin: 0 auto;
+}
+
+.displayCase {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &Item {
+        .itemInfo {
+            font-family: Seg_Reg;
+            font-size: 12px;
+
+            .price {
+                font-family: Seg_Bold;
+                font-size: 16px;
+                margin-bottom: 25px;
+            }
+
+            .addBtn {
+                height: 50px;
+                width: 75%;
+                border: $siteBlack solid 1px;
+
+                display: flex;
+                align-items: center;
+                justify-content: space-evenly;
+            }
+        }
+    }
 }
