--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,11 @@
-@import "nav.scss";
-@import "structure.scss";
-@import "about.scss";
-@import "books.scss";
-@import "cart.scss";
-@import "home.scss";
+@import 'variables.scss';
+@import 'structure.scss';
+@import 'nav.scss';
+@import 'footer.scss';
+@import 'home.scss';
+@import 'about.scss';
+@import 'books.scss';
+@import 'banner.scss';
+@import 'cart.scss';
+@import 'e-book.scss';
+@import 'bookclub.scss';
