--- a/scss/bookclub.scss
+++ b/scss/bookclub.scss
@@ -1,58 +1,65 @@
-.bookclub{
-    margin-top: 172px;
-    height: 1888px;
-    margin-top: 172px;
+// All About Books Start
+.blogBackground1 {
+  // background-color: #587C83;
+  background-image: linear-gradient(
+      rgba(88, 124, 131, 0.4),
+      rgba(88, 124, 131, 0.4)
+    ),
+    url(../images/book-club-hero.jpg);
+  width: 1464px;
+  height: 463px;
+  margin: 0 auto;
+  margin-top: 117px;
+  margin-bottom: 123px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
+  .blogInfo {
+    margin: 0 auto;
+    padding-top: 150px;
+    width: 900px;
+    text-align: center;
+    color: #fff;
 
-    .hero{
-        width: 1464px;
-        height: 463px;
-        margin: 0 auto;
-
-        h1{
-            font-size: 32px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            margin-bottom: 50px;
-        }
-        p{
-            font-size: 26px;
-            color: white;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-        }
-
-        img{
-            height: 100%;
-            width: 100%;
-        }
+    .blogInfoHeader {
+      font-size: 32px;
+      margin-bottom: 60px;
     }
 
-    .stuff{
-        display: flex;
-        width: 1552px;
-        height: 700px;
-
-
-        .left{
-            width: 622px;
-            height: 463px;
-
-            img{
-                height: 100%;
-                width: 100%;
-            }
-        }
-
-        .right{
-           width: 898px;
-            margin-left: 39px;
-
-            p{
-                margin-bottom: 10px;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-size: 16px;
-            }
-        }
+    .blogInfoTxt {
+      font-size: 22px;
+      margin-bottom: 60px;
     }
+  }
+}
+
+.blog-section {
+  //  background-color: #587C83;
+  width: 1464px;
+  min-height: 463px;
+  margin: 0 auto;
+  margin-top: 117px;
+  margin-bottom: 123px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  //   position: relative;
+
+  img {
+    margin: 0 auto;
+    text-align: center;
+    height: 463px;
+  }
+  .blog-text {
+    p {
+      padding-left: 20px;
+      // text-transform: uppercase;
+      text-align: left;
+      font-size: 15px;
+      font-family: Segoe UI;
+      color: #000;
+      // padding-bottom: 200px;
+    }
+  }
 }
