--- a/css/styles.css
+++ b/css/styles.css
@@ -483,55 +483,6 @@ section.books > *:not(:last-child) {
     width: auto;
   }
 }
-.e-book {
-  margin-top: 172px;
-  height: 1888px;
-  margin-top: 172px;
-}
-.e-book .hero {
-  width: 1464px;
-  height: 463px;
-  margin: 0 auto;
-}
-.e-book .hero h1 {
-  font-size: 32px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  margin-bottom: 50px;
-}
-.e-book .hero p {
-  font-size: 26px;
-  color: white;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-}
-.e-book .hero img {
-  height: 100%;
-  width: 100%;
-}
-.e-book .stuff {
-  display: flex;
-  width: 1552px;
-  height: 700px;
-}
-.e-book .stuff .left {
-  width: 622px;
-  height: 463px;
-}
-.e-book .stuff .left img {
-  height: 100%;
-  width: 100%;
-}
-.e-book .stuff .right {
-  width: 898px;
-  margin-left: 39px;
-}
-.e-book .stuff .right p {
-  margin-bottom: 10px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-}
-
 .blogBackground1 {
   background-image: linear-gradient(rgba(88, 124, 131, 0.4), rgba(88, 124, 131, 0.4)), url(../images/book-club-hero.jpg);
   width: 1464px;
@@ -718,4 +669,54 @@ section.books > *:not(:last-child) {
   font-family: Segoe UI;
   color: #000;
   padding-bottom: 200px;
+}
+
+.blogBackground3 {
+  background-image: linear-gradient(rgba(88, 124, 131, 0.4), rgba(88, 124, 131, 0.4)), url(../images/book-club-hero.jpg);
+  width: 1464px;
+  height: 463px;
+  margin: 0 auto;
+  margin-top: 117px;
+  margin-bottom: 123px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.blogBackground3 .blogInfo {
+  margin: 0 auto;
+  padding-top: 150px;
+  width: 900px;
+  text-align: center;
+  color: #fff;
+}
+.blogBackground3 .blogInfo .blogInfoHeader {
+  font-size: 32px;
+  margin-bottom: 60px;
+}
+.blogBackground3 .blogInfo .blogInfoTxt {
+  font-size: 22px;
+  margin-bottom: 60px;
+}
+
+.blog-section {
+  width: 1464px;
+  min-height: 463px;
+  margin: 0 auto;
+  margin-top: 117px;
+  margin-bottom: 123px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.blog-section img {
+  margin: 0 auto;
+  text-align: center;
+  height: 463px;
+}
+.blog-section .blog-text p {
+  padding-left: 20px;
+  text-align: left;
+  font-size: 15px;
+  font-family: Segoe UI;
+  color: #000;
 }
