--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,8 +7,8 @@
 @import "books.scss";
 @import "banner.scss";
 @import "cart.scss";
-@import "e-book.scss";
 @import "bookclub.scss";
 @import "account.scss";
 @import "blog.scss";
 @import "feb-blog.scss";
+@import "e-switch.scss";
