--- a/scss/feb-blog.scss
+++ b/scss/feb-blog.scss
@@ -70,6 +70,7 @@
 
   .blogInfoTxt {
     padding-left: 20px;
+    text-transform: uppercase;
     text-align: left;
     font-size: 15px;
     font-family: Segoe UI;
