--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -28,10 +28,13 @@
     .blogInfoHeader {
       font-size: 32px;
       margin-bottom: 60px;
+      color: #fff;
     }
 
     .blogInfoTxt {
       margin-bottom: 60px;
+      font-size: 20px;
+      color: white;
     }
 
     .blogBtn {
@@ -53,16 +56,20 @@
     .blogInfoHeader {
       font-size: 32px;
       margin-bottom: 60px;
+      color: #fff;
     }
 
     .blogInfoEReadHeader {
       font-size: 32px;
       margin-bottom: 60px;
       width: 444px;
+      color: white;
     }
 
     .blogInfoTxt {
       margin-bottom: 60px;
+      font-size: 20px;
+      color: white;
     }
 
     .blogBtn {
