--- a/css/styles.css
+++ b/css/styles.css
@@ -547,19 +547,22 @@ section.books > *:not(:last-child) {
   width: 280px;
   background-color: #ffffff;
   padding: 20px;
+  color: black;
+  font-size: 20px;
 }
 
 .Login-Heading,
 .Signin-Heading {
   font-size: 1.5rem;
-  color: #333;
   margin-bottom: 10px;
   font-weight: bold;
+  color: black;
+  font-size: 20px;
 }
 
 label {
   font-size: 0.9rem;
-  color: #555;
+  color: black;
   margin-bottom: 5px;
 }
 
@@ -571,15 +574,14 @@ p {
 
 input {
   border: none;
-  border-bottom: 2px solid #5a7d7c; /* Adds underline */
-  padding: 8px 0;
+  border-bottom: 2px solid #5a7d7c;
   margin-bottom: 15px;
   font-size: 1rem;
 }
 
 input:focus {
   outline: none;
-  border-bottom-color: #496b6a; /* Changes underline color on focus */
+  border-bottom-color: #496b6a;
 }
 
 button {
@@ -625,9 +627,12 @@ button:hover {
 .blogBackgroundClr .blogInfo .blogInfoHeader {
   font-size: 32px;
   margin-bottom: 60px;
+  color: #fff;
 }
 .blogBackgroundClr .blogInfo .blogInfoTxt {
   margin-bottom: 60px;
+  font-size: 20px;
+  color: white;
 }
 .blogBackgroundClr .blogInfo .blogBtn {
   width: 222px;
@@ -646,14 +651,18 @@ button:hover {
 .blogBackgroundClr .blogHalfInfo .blogInfoHeader {
   font-size: 32px;
   margin-bottom: 60px;
+  color: #fff;
 }
 .blogBackgroundClr .blogHalfInfo .blogInfoEReadHeader {
   font-size: 32px;
   margin-bottom: 60px;
   width: 444px;
+  color: white;
 }
 .blogBackgroundClr .blogHalfInfo .blogInfoTxt {
   margin-bottom: 60px;
+  font-size: 20px;
+  color: white;
 }
 .blogBackgroundClr .blogHalfInfo .blogBtn {
   width: 222px;
