Added cart.js; Added cart.js script

--- a/scss/cart.scss
+++ b/scss/cart.scss
@@ -1,117 +1,115 @@
-.cart{
-    height: 1888px;
+.cart {
+  // height: 1888px;
+  width: 1920px;
+
+  .content {
+    width: 420px;
+    height: 317px;
+    margin-top: 152px;
+    margin-left: 50px;
+    display: flex;
+
+    .img {
+      height: 317px;
+      width: 205px;
+
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+
+    h1 {
+      font-size: 16px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: bold;
+      padding-left: 22px;
+    }
+
+    h2 {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: bold;
+      padding-left: 22px;
+      font-size: 16px;
+    }
+    h3 {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 16px;
+      padding-left: 22px;
+      margin-top: -15px;
+      font-weight: normal;
+    }
+    h4 {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 16px;
+      padding-left: 22px;
+      margin-top: 40px;
+      font-weight: normal;
+    }
+  }
+  .line {
+    border-bottom: solid black;
     width: 1920px;
+    margin-top: 97px;
+    margin-left: -150px;
+  }
 
-    .content{
-        width: 420px;
-        height: 317px;
-        margin-top: 152px;
-        margin-left: 50px;
-        display: flex;
+  .mlk {
+    width: 600px;
+    height: 317px;
+    margin-left: 50px;
+    margin-top: 96px;
+    display: flex;
 
-        .img{
-            height: 317px;
-            width: 205px;
-            
-            img{
-                height: 100%;
-                width: 100%;
-            }
-        }
+    .img {
+      height: 317px;
+      width: 205px;
 
-        h1{
-           font-size: 16px;
-           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-           font-weight: bold;
-           padding-left: 22px;
-        }
-
-        h2{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            padding-left: 22px;
-            font-size: 16px;
-        }
-        h3{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 16px;
-            padding-left: 22px;
-            margin-top: -15px;
-            font-weight: normal;
-        }
-        h4{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 16px;
-            padding-left: 22px;
-            margin-top: 40px;
-            font-weight: normal;
-        }
-    }
-    .line{
-        border-bottom: solid black;
-        width: 1920px;
-        margin-top: 97px;
-        margin-left: -150px;
+      img {
+        height: 100%;
+        width: 100%;
+      }
     }
 
-    .mlk{
-        width: 600px;
-        height: 317px;
-        margin-left: 50px;
-        margin-top: 96px;
-        display: flex;
-
-        .img{
-            height: 317px;
-            width: 205px;
-            
-            img{
-                height: 100%;
-                width: 100%;
-            }
-        }
-
-        h1{
-            font-size: 16px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-            font-weight: bold;
-            padding-left: 22px;
-         }
- 
-         h2{
-             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-             font-weight: bold;
-             padding-left: 22px;
-             font-size: 16px;
-         }
-         h3{
-             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-             font-size: 16px;
-             padding-left: 22px;
-             margin-top: -15px;
-             font-weight: normal;
-         }
-         h4{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 16px;
-            padding-left: 22px;
-            margin-top: 40px;
-            font-weight: normal;
-        }
+    h1 {
+      font-size: 16px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: bold;
+      padding-left: 22px;
     }
 
+    h2 {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-weight: bold;
+      padding-left: 22px;
+      font-size: 16px;
+    }
+    h3 {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 16px;
+      padding-left: 22px;
+      margin-top: -15px;
+      font-weight: normal;
+    }
+    h4 {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 16px;
+      padding-left: 22px;
+      margin-top: 40px;
+      font-weight: normal;
+    }
+  }
 }
 
 // ipad
 @media screen and (max-width: 768px) {
+  .content {
+    height: auto;
+    width: auto;
+  }
 
-    .content{
-        height: auto;
-        width: auto;
-    }
-    
-    .mlk{
-        height: auto;
-        width: auto;
-    }
+  .mlk {
+    height: auto;
+    width: auto;
+  }
 }
